[package]
name = "rusty_dns"
version = "0.0.1"
authors = ["willfleetw"]
edition = "2018"
license = "MIT"
description = "A DNS implementation with no dependencies"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dns"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = false        # Documentation examples are tested by default.

[[bin]]
name = "dns"
test = false

[dependencies]
