[package]
name = "rusty_dns"
version = "0.0.3"
authors = ["willfleetw"]
edition = "2018"
license = "MIT"
description = "A DNS implementation with no dependencies other than rand"
repository = "https://github.com/willfleetw/rusty_dns"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusty_dns"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = false        # Documentation examples are tested by default.

[[bin]]
name = "rusty_dns"
test = false

[dependencies]
rand = "0.7.3"